[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vidiq-api"
version = "1.0.0"
description = "Python wrapper for vidIQ YouTube keyword analysis API"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "vidIQ Python API", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
]
keywords = ["vidiq", "youtube", "seo", "keyword", "analysis", "api", "wrapper"]

[project.urls]
Homepage = "https://github.com/yourusername/vidiq-python-api"
Documentation = "https://github.com/yourusername/vidiq-python-api#readme"
Repository = "https://github.com/yourusername/vidiq-python-api"
"Bug Tracker" = "https://github.com/yourusername/vidiq-python-api/issues"

[project.scripts]
vidiq-api = "vidiq_api.vidiq_api:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools]
packages = ["vidiq_api"]

[tool.setuptools.package-data]
vidiq_api = ["py.typed"]
